--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Arthur Michel" />
   <meta name="description" content="Sprint 5" />
-  <meta name="keywords" content="HTML, CSS, Figma"/>
+  <meta name="keywords" content="País de Gales, Galeria de arte, Kentucky"/>
   <link rel="stylesheet" href="./pages/index.css"/>
-  <link rel="stylesheet" href="./vendor/fonts.css"/>
   <link rel="shortcut icon" href="./favicon.svg"/>
   <link rel="preconnect" href="./vendor/fonts/Inter-4.0/">
   <title>De Pátria para Pátria</title>
