--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
           cidade natal à nossa coleção. Não importa de onde você é, estamos felizes
           por você ser nosso vizinho.</p>
       </section>
+  <!--PARTE COM GRID-->
+      <section class="photo-grid">
+        <div class="photo-grid__content">
+          <img src="./images/photo_grid1.png" alt="imagem litoral" class="photo-grid__item">
+          <img src="./images/photo_grid2.png" alt="imagem Gales" class="photo-grid__item">
+          <img src="./images/photo_grid3.png" alt="imagem capela" class="photo-grid__item">
+          <img src="./images/photo_grid4.png" alt="imagem cidade" class="photo-grid__item">
+          <img src="./images/photo_grid5.png" alt="imagem campo" class="photo-grid__item">
+          <img src="./images/photo_grid6.png" alt="imagem parque" class="photo-grid__item">
+          <img src="./images/photo_grid7.png" alt="imagem cabana" class="photo-grid__item">
+          <img src="./images/photo_grid8.png" alt="imagem casas" class="photo-grid__item">
+        </div>
+      </section>
     </main>
   <!--FOOTER-->
     <footer class="footer">
