--- a/index.html
+++ b/index.html
@@ -66,6 +66,96 @@
           <img src="./images/photo_grid8.png" alt="imagem casas" class="photo-grid__item">
         </div>
       </section>
+  <!--CARDS DE CIDADES-->
+      <section class="places">
+  <!--PAÍS DE GALES-->
+        <div class="places__container">
+          <h2 class="places__title"> Criccieth, País de Gales </h2>
+          <img class="places__image" src="./images/paísdegales.png" alt="imagem de País de Gales">
+          <div class="places__creator">
+            <p class="places__artist"> ARTISTAS </p>
+            <p class="places__author"> <span class="places__span-accent"> Steffan Warren, editor-chefe </span>
+              Kseniya Glagoleva, gerente de projeto </p>
+          </div>
+          <div class="places__content">
+            <p class="places__paragraph"> A ruína medieval do Castelo de Cricieth tem vista para a cidade abaixo
+                de uma rocha que se projeta para o mar. Acredita-se que tenha sido construído por Llewelyn,
+                o Grande, no século XIII. Cerca de 900 anos depois, a auto-intitulada *Pérola de Gales nas margens
+                de Snowdonia* tornou-se um destino turístico popular durante os meses de verão.</p>
+              <p class="places__paragraph"> A uma curta caminhada da estrada do castelo, você pode desfrutar do
+                melhor sorvete do mundo no Cadwalader's, cujo ingrediente secreto, segundo rumores, são algas
+                marinhas de origem local. Outra reivindicação à fama é o fato de que Criccieth ganhou o prêmio
+                *Wales in Bloom* por cinco anos consecutivos por suas espetaculares exibições florais pela cidade.
+                Foi também a casa de David Lloyd George, o único galês a ocupar o cargo de primeiro-ministro do
+                Reino Unido.</p>
+          </div>
+        </div>
+      </section>
+  <!--EUA-->
+        <div class="places__container">
+          <h2 class="places__title"> Berea, EUA </h2>
+          <img class="places__image" src="./images/eua.png" alt="imagem dos EUA">
+          <div class="places__creator">
+            <p class="places__artist"> ARTISTA </p>
+            <p class="places__author"> Travis Turner, autor e editor </p>
+          </div>
+          <div class="places__content">
+            <p class="places__paragraph"> Berea é uma pequena cidade localizada na parte central do Kentucky.
+                A cidade é cercada por belas florestas e campos. É conhecida como a capital do artesanato do estado,
+                e os visitantes encontrarão muitas oportunidades de compras: lojas com bijuterias artesanais, velas,
+                artigos de madeira, galerias, ateliês de vidro e muito mais. A cidade realiza um festival anual que
+                celebra o "pão de colher", um prato local feito com pão de milho e servido com uma colher de pau.</p>
+              <p class="places__paragraph"> No entanto, provavelmente é mais conhecido pela faculdade local. O
+                Berea College foi fundado em 1855 e foi o primeiro colégio no sul a ser racialmente integrado, bem
+                como o primeiro a ser misto. De forma um tanto singular, não cobra mensalidades - todo aluno recebe
+                uma bolsa de estudos integral.</p>
+          </div>
+        </div>
+    <!--BURUNDI-->
+         <div class="places__container">
+           <h2 class="places__title"> Muramvya, Burundi </h2>
+           <img class="places__image" src="./images/burundi.png" alt="imagem de Burundi">
+           <div class="places__creator">
+             <p class="places__artist"> ARTISTA </p>
+             <p class="places__author"> Grevisse Kenguruka, editor técnico </p>
+           </div>
+           <div class="places__content">
+             <p class="places__paragraph"> Muramvya é uma das 18 províncias de Burundi. Na era do reino, Muramvya
+                 era a capital real e em 2007, por causa de sua paisagem cultural e natural, foi adicionada à Lista
+                 Provisória do Patrimônio Mundial da UNESCO. Está localizada no centro de Burundi, entre as capitais
+                 políticas e econômicas do país.</p>
+             <p class="places__paragraph"> O clima é bastante frio à noite, mas durante o dia, você pensaria que
+                 está no céu. A 2.665 metros (8.743 pés) acima do nível do mar, o Monte Teza é um dos lugares mais
+                 frios da província. Mas essa brisa fresca permite uma das maiores plantações de chá e café do país,
+                 que representam a maior parte das exportações do Burundi.</p>
+             <p class="places__paragraph"> O Parque Nacional de Kibira, uma das maiores reservas de vida selvagem
+                 para macacos, se sobrepõe a quatro províncias, incluindo Muramvya. Este Parque Nacional
+                 encontra-se no ápice das belas montanhas do Congo-Nile Divide, variando entre 1.550 e 2.660 metros
+                 de altitude. Está repleta de uma bela vegetação e fonte para os vários rios e riachos que fornecem
+                 água em todo o país.</p>
+           </div>
+         </div>
+    <!--FLORIANÓPOLIS-->
+         <div class="places__container">
+           <h2 class="places__title"> Florianópolis, Brasil </h2>
+           <img class="places__image" src="./images/florianópolis.jpg" alt="imagem de Florianópolis">
+          <div class="places__creator">
+            <p class="places__artist"> ARTISTA </p>
+            <p class="places__author"> Arthur Michel, desenvolvedor </p>
+          </div>
+          <div class="places__content">
+            <p class="places__paragraph">
+                Florianópolis, a ilha da magia, cativa com sua beleza natural e atmosfera encantadora. Localizada no sul
+                do Brasil, suas praias de águas cristalinas, dunas douradas e mata atlântica preservada oferecem um
+                refúgio perfeito para os amantes da natureza e os buscadores de tranquilidade. Além disso, a cidade
+                mescla sua herança histórica com uma vibe cosmopolita, refletida em sua arquitetura colonial, festivais
+                culturais e uma vibrante cena gastronômica.</p>
+            <p class="places__paragraph"> Florianópolis é um destino que inspira e acolhe, onde cada rua, cada praia, conta uma história única de beleza e serenidade.
+                À medida que o sol se põe sobre a Baía Norte, a energia da cidade ganha vida em suas animadas
+                ruas e bares à beira-mar. A vida noturna da cidade oferece uma mistura de ritmos e sabores, onde
+                moradores e visitantes se reúnem para celebrar a alegria de viver. </p>
+          </div>
+         </div>
     </main>
   <!--FOOTER-->
     <footer class="footer">
