doing places part

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
       <section class="places">
   <!--PAÍS DE GALES-->
         <div class="places__container">
-          <h2 class="places__title"> Criccieth, País de Gales </h2>
-          <img class="places__image" src="./images/paísdegales.png" alt="imagem de País de Gales">
+          <h2 class="places__title"> Criccieth, País de <br> Gales </h2>
           <div class="places__creator">
             <p class="places__artist"> ARTISTAS </p>
-            <p class="places__author"> <span class="places__span-accent"> Steffan Warren, editor-chefe </span>
+            <p class="places__author"> Steffan Warren, editor-chefe <br>
               Kseniya Glagoleva, gerente de projeto </p>
           </div>
-          <div class="places__content">
+          <img class="places__image" src="./images/__image (1).png" alt="imagem de País de Gales">
+          <div class="places__description">
             <p class="places__paragraph"> A ruína medieval do Castelo de Cricieth tem vista para a cidade abaixo
                 de uma rocha que se projeta para o mar. Acredita-se que tenha sido construído por Llewelyn,
                 o Grande, no século XIII. Cerca de 900 anos depois, a auto-intitulada *Pérola de Gales nas margens
@@ -89,17 +89,18 @@
                 Foi também a casa de David Lloyd George, o único galês a ocupar o cargo de primeiro-ministro do
                 Reino Unido.</p>
           </div>
+          <a class="places__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">
+            Compre esta obra de arte como NFT </a>
         </div>
-      </section>
   <!--EUA-->
         <div class="places__container">
           <h2 class="places__title"> Berea, EUA </h2>
-          <img class="places__image" src="./images/eua.png" alt="imagem dos EUA">
           <div class="places__creator">
             <p class="places__artist"> ARTISTA </p>
             <p class="places__author"> Travis Turner, autor e editor </p>
           </div>
-          <div class="places__content">
+          <img class="places__image" src="./images/__image (2).png" alt="imagem dos EUA">
+          <div class="places__description">
             <p class="places__paragraph"> Berea é uma pequena cidade localizada na parte central do Kentucky.
                 A cidade é cercada por belas florestas e campos. É conhecida como a capital do artesanato do estado,
                 e os visitantes encontrarão muitas oportunidades de compras: lojas com bijuterias artesanais, velas,
@@ -110,16 +111,18 @@
                 como o primeiro a ser misto. De forma um tanto singular, não cobra mensalidades - todo aluno recebe
                 uma bolsa de estudos integral.</p>
           </div>
+          <a class="places__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">
+            Compre esta obra de arte como NFT </a>
         </div>
     <!--BURUNDI-->
          <div class="places__container">
            <h2 class="places__title"> Muramvya, Burundi </h2>
-           <img class="places__image" src="./images/burundi.png" alt="imagem de Burundi">
            <div class="places__creator">
-             <p class="places__artist"> ARTISTA </p>
-             <p class="places__author"> Grevisse Kenguruka, editor técnico </p>
+            <p class="places__artist"> ARTISTA </p>
+            <p class="places__author"> Grevisse Kenguruka, editor técnico </p>
            </div>
-           <div class="places__content">
+           <img class="places__image" src="./images/__image (3).png" alt="imagem de Burundi">
+           <div class="places__description">
              <p class="places__paragraph"> Muramvya é uma das 18 províncias de Burundi. Na era do reino, Muramvya
                  era a capital real e em 2007, por causa de sua paisagem cultural e natural, foi adicionada à Lista
                  Provisória do Patrimônio Mundial da UNESCO. Está localizada no centro de Burundi, entre as capitais
@@ -134,16 +137,18 @@
                  de altitude. Está repleta de uma bela vegetação e fonte para os vários rios e riachos que fornecem
                  água em todo o país.</p>
            </div>
+           <a class="places__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">
+            Compre esta obra de arte como NFT </a>
          </div>
     <!--FLORIANÓPOLIS-->
          <div class="places__container">
            <h2 class="places__title"> Florianópolis, Brasil </h2>
-           <img class="places__image" src="./images/florianópolis.jpg" alt="imagem de Florianópolis">
-          <div class="places__creator">
+           <div class="places__creator">
             <p class="places__artist"> ARTISTA </p>
             <p class="places__author"> Arthur Michel, desenvolvedor </p>
           </div>
-          <div class="places__content">
+           <img class="places__image" src="./images/florianópolis.jpg" alt="imagem de Florianópolis">
+          <div class="places__description">
             <p class="places__paragraph">
                 Florianópolis, a ilha da magia, cativa com sua beleza natural e atmosfera encantadora. Localizada no sul
                 do Brasil, suas praias de águas cristalinas, dunas douradas e mata atlântica preservada oferecem um
@@ -155,7 +160,10 @@
                 ruas e bares à beira-mar. A vida noturna da cidade oferece uma mistura de ritmos e sabores, onde
                 moradores e visitantes se reúnem para celebrar a alegria de viver. </p>
           </div>
+          <a class="places__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">
+            Compre esta obra de arte como NFT </a>
          </div>
+      </section>
     </main>
   <!--FOOTER-->
     <footer class="footer">
