--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <section class="places">
   <!--PAÍS DE GALES-->
         <div class="places__container">
-          <h2 class="places__title"> Criccieth, País de <br> Gales </h2>
+          <h2 class="places__title"> Criccieth, País de Gales </h2>
           <div class="places__creator">
             <p class="places__artist"> ARTISTAS </p>
             <p class="places__author"> Steffan Warren, editor-chefe <br>
