--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p class="places__author"> Steffan Warren, editor-chefe <br>
               Kseniya Glagoleva, gerente de projeto </p>
           </div>
-          <img class="places__image" src="./images/__image (1).png" alt="imagem de País de Gales">
+          <img class="places__image" src="./images/__image_gales.png" alt="imagem de País de Gales">
           <div class="places__description">
             <p class="places__paragraph"> A ruína medieval do Castelo de Cricieth tem vista para a cidade abaixo
                 de uma rocha que se projeta para o mar. Acredita-se que tenha sido construído por Llewelyn,
@@ -99,7 +99,7 @@
             <p class="places__artist"> ARTISTA </p>
             <p class="places__author"> Travis Turner, autor e editor </p>
           </div>
-          <img class="places__image" src="./images/__image (2).png" alt="imagem dos EUA">
+          <img class="places__image" src="./images/__image_eua.png" alt="imagem dos EUA">
           <div class="places__description">
             <p class="places__paragraph"> Berea é uma pequena cidade localizada na parte central do Kentucky.
                 A cidade é cercada por belas florestas e campos. É conhecida como a capital do artesanato do estado,
@@ -121,7 +121,7 @@
             <p class="places__artist"> ARTISTA </p>
             <p class="places__author"> Grevisse Kenguruka, editor técnico </p>
            </div>
-           <img class="places__image" src="./images/__image (3).png" alt="imagem de Burundi">
+           <img class="places__image" src="./images/__image_burundi.png" alt="imagem de Burundi">
            <div class="places__description">
              <p class="places__paragraph"> Muramvya é uma das 18 províncias de Burundi. Na era do reino, Muramvya
                  era a capital real e em 2007, por causa de sua paisagem cultural e natural, foi adicionada à Lista
