--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
           <h2 class="places__title"> Criccieth, País de Gales </h2>
           <div class="places__creator">
             <p class="places__artist"> ARTISTAS </p>
-            <p class="places__author"> Steffan Warren, editor-chefe <br>
-              Kseniya Glagoleva, gerente de projeto </p>
+            <p class="places__author"> Steffan Warren, editor-chefe </p>
+            <p class="places__author"> Ksenya Glagoleva, gerente de projeto </p>
           </div>
           <img class="places__image" src="./images/__image_gales.png" alt="imagem de País de Gales">
           <div class="places__description">
